# tauri-app

./: package.json  vite.config.js
.github/: renovate.json5
.github/workflows/: codeql-analysis.yml  publish.yml  release.yaml  test-on-pr.yaml  upload.yml
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
src-tauri/src/: client.rs  eventloop.rs  lib.rs  main.rs  networkbehavior.rs  state.rs  swarm.rs
src-tauri/src/network/: client.rs  eventloop.rs  mod.rs  networkbehavior.rs  swarm.rs
src/components/: ChatInput.vue  HelloWorld.vue  LogLine.vue
src/stores/: message.js
src/views/: Chat.vue
