[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# required to make bundleing work
[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "server"
test = false
bench = false

[[bin]]
name = "generate-key"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "updater"] }
tokio = { version = "1.21.2", features = ["time", "macros"] }
libp2p = { version = "0.48.0", features = ["tcp-tokio", "dns-tokio"] }
base64 = "0.13.0"
env_logger = "0.9.1"

[patch.crates-io]
winrt-notification = { git = "https://github.com/hef/winrt-notification", rev="ea08c23590a9012406b7f9d55b0c37ce275ccb3b" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
#panic = "abort" # Strip expensive panic clean-up logic
panic = "unwind"
debug = true
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
