[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# required to make bundleing work
[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["updater"] }
tokio = { version = "1.24.0", features = ["time", "macros"] }
libp2p = { version = "0.49.0", features = ["autonat", "dcutr", "dns", "gossipsub", "identify", "kad", "noise", "ping", "relay", "tcp", "tokio", "mplex", "yamux" ] } 

base64 = "0.13.1"
env_logger = "0.9.1"
reqwest = { version = "0.11.12", features = ["json"] }
regex = "1.7.0"
mimalloc = "0.1.30"
clap = { version = "4.0.32", features = ["derive", "env", "unicode"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
#panic = "abort" # Strip expensive panic clean-up logic
panic = "unwind"
debug = true
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = "thin" # Enables link to optimizations
opt-level = "s" # Optimize for binary size
